[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cenas/Habilidades/script_bola_de_fogo.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Habilidades/Imagens/bola_fogo.png" type="Texture" id=2]
[ext_resource path="res://Cenas/Habilidades/Imagens/bola_fogo_sumindo.png" type="Texture" id=3]
[ext_resource path="res://Cenas/Efeitos_sonoros/som_bola_fogo_final.mp3" type="AudioStream" id=4]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bola_fogo/IMG_bola_fogo:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "bola_fogo"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bola_fogo/IMG_bola_fogo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bola_fogo/IMG_bola_fogo:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bola_fogo/IMG_bola_fogo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bola_fogo/Anima:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "bola_fogo_sumindo"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Bola_fogo/IMG_bola_fogo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bola_fogo/IMG_bola_fogo:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bola_fogo/IMG_bola_fogo:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 12.122

[node name="Bola_fogo" type="Node2D"]

[node name="Bola_fogo" type="Area2D" parent="."]
scale = Vector2( 0.675302, 0.675302 )
collision_layer = 512
collision_mask = 5190
script = ExtResource( 1 )

[node name="IMG_bola_fogo" type="Sprite" parent="Bola_fogo"]
position = Vector2( -19.0819, -5.05107 )
texture = ExtResource( 3 )
hframes = 4

[node name="Anima" type="AnimationPlayer" parent="Bola_fogo"]
root_node = NodePath("../..")
anims/RESET = SubResource( 4 )
anims/bola_fogo = SubResource( 2 )
anims/bola_fogo_sumindo = SubResource( 3 )

[node name="Timer" type="Timer" parent="Bola_fogo"]
wait_time = 1.5
autostart = true

[node name="Colli_bola_fogo" type="CollisionShape2D" parent="Bola_fogo"]
position = Vector2( 0.280617, 0.280609 )
shape = SubResource( 1 )

[node name="Som_fogo_sumindo" type="AudioStreamPlayer2D" parent="Bola_fogo"]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="area_entered" from="Bola_fogo" to="Bola_fogo" method="_on_Bola_fogo_area_entered"]
[connection signal="body_entered" from="Bola_fogo" to="Bola_fogo" method="_on_Bola_fogo_body_entered"]
[connection signal="animation_finished" from="Bola_fogo/Anima" to="Bola_fogo" method="_on_Anima_animation_finished"]
[connection signal="timeout" from="Bola_fogo/Timer" to="Bola_fogo" method="_on_Timer_timeout"]
